fixed white space issue. all pages are animated

--- a/src/App.css
+++ b/src/App.css
@@ -21,18 +21,17 @@
 }
 
 *{
-  box-sizing: content-box;
-  box-sizing: inherit;
+  box-sizing: border-box;
 }
-
-html {
-  min-height: 100vh;
-  max-width: 100vw;
+html,body{
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
 /* ---------------------- Main Body Stylings --------------------------- */
  .pageContent{
    background-color: var(--kombu-green);
-   width: 100vw;
+   max-width: 100vw;
    min-height: 100vh;
  }
 
@@ -99,7 +98,7 @@ width: 100%;
 }
 
 .aboutMe img{
-margin: 2vw;
+margin: 2vw auto;
 width: 20vmax;
 border-radius: 15px 50px;
 border-style: inset;
@@ -108,6 +107,7 @@ box-shadow: -2px -2px 3px var(--fawn);
 }
 .aboutMe div{
   padding-bottom: 5vh;
+  margin: 2vw auto;
 }
 .aboutMe p{
   border-style: outset;
@@ -169,15 +169,11 @@ box-shadow: -2px -2px 3px var(--cornsilk);
 }
 
 /* --------------------------  Resume Stylings  ----------------------------- */
-.resumeSection{
-  min-height:100vh;
-  min-width: 100vw;
-}
 
 .resumeLink{
   text-decoration: none;
   padding: 4vmin;
-  margin-bottom: 7vmin ;
+  margin: 7vw ;
   font-size: 5vmin;
   color: var(--fawn);
   border-radius: 15px 50px;
@@ -204,7 +200,7 @@ box-shadow: -2px -2px 3px var(--cornsilk);
   border-style: inset;
   border-color: var(--fawn);
   box-shadow: -2px -2px 3px var(--cornsilk);
-  margin: 2vmin;
+  margin: 5vw;
   height: 70vh;
   padding: 4vmin;
   height: max-content;
